<?xml version="1.0"?>
<package format="3">
  <name>fkie_node_manager_daemon</name>
  <version>1.2.7</version>
  <replace>node_manager_daemon_fkie</replace>
  <description>A daemon node to manage ROS launch files and launch nodes from loaded files.</description>

  <license>BSD</license>
  <author>Alexander Tiderko</author>
  <maintainer email="alexander.tiderko@gmail.com">Alexander Tiderko</maintainer>
  <url>https://github.com/fkie/multimaster_fkie</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>fkie_multimaster_msgs</build_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-pkg</build_depend>
  <!-- <build_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-pkg</build_depend> -->
  <build_depend>roslaunch</build_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>fkie_master_discovery</exec_depend>
  <exec_depend>fkie_multimaster_msgs</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rospy</exec_depend>

  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-grpcio</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-psutil</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-ruamel.yaml</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-grpc-tools</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-grpcio</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-psutil</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-ruamel.yaml</exec_depend>

  <depend>screen</depend>

  <test_depend>rostest</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>
