<package>
  <name>master_discovery_fkie</name>
  <description>
     Discover the running ROS Masters in local network. The 
     discovering is done by sending an echo heartbeat messages to a defined 
     multicast group.
     The alternative is to use a zeroconf/avahi daemon to register the ROS 
     master as service and discover other ROS masters.
  </description>
  <version>0.4.1</version>
  <license>BSD</license>
  <author>Alexander Tiderko</author>
  <maintainer email="alexander.tiderko@gmail.com">Alexander Tiderko</maintainer>
  <url>http://ros.org/wiki/master_discovery_fkie</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_srvs</build_depend>
  <run_depend>std_srvs</run_depend>
  <build_depend>multimaster_msgs_fkie</build_depend>
  <run_depend>multimaster_msgs_fkie</run_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rosgraph</run_depend>
  <run_depend>python-avahi</run_depend>
  <run_depend>avahi-daemon</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>
