<package>
  <name>multimaster_fkie</name>
  <description>
    The metapackage to combine the nodes required to establish and manage a multimaster network. 
    This requires no or minimal configuration. The changes are automatically detected and synchronized.
  </description>
  <version>0.4.1</version>
  <license>BSD</license>
  <author>Alexander Tiderko</author>
  <maintainer email="alexander.tiderko@gmail.com">Alexander Tiderko</maintainer>
  <url>http://ros.org/wiki/multimaster_fkie</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>multimaster_msgs_fkie</run_depend>
  <run_depend>default_cfg_fkie</run_depend>
  <run_depend>master_discovery_fkie</run_depend>
  <run_depend>master_sync_fkie</run_depend>
  <run_depend>node_manager_fkie</run_depend>

  <export>
    <metapackage/>
  </export>

</package>