<?xml version="1.0"?>
<package format="2">
  <name>node_manager_daemon_fkie</name>
  <version>1.0.0</version>
  <description>A daemon node to manage ROS launch files and launch nodes from loaded files.</description>

  <license>BSD</license>
  <author>Alexander Tiderko</author>
  <maintainer email="alexander.tiderko@gmail.com">Alexander Tiderko</maintainer>
  <url>https://github.com/fkie/multimaster_fkie</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>python-catkin-pkg</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>master_discovery_fkie</exec_depend>
  <exec_depend>multimaster_msgs_fkie</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rospy</exec_depend>

  <depend>screen</depend>

  <test_depend>rostest</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>
